Mejoras de inscripciones de turnos y guardias.